# TrendSpec

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  RESEARCH_RULES.md  pyproject.toml
examples/: factor_combo_cn_clenow_combo.json  factor_combo_cn_clenow_test.json  factor_combo_cn_current_ratio_only.json  factor_combo_cn_current_ratio_ps_ttm_turnover.json  factor_combo_cn_debt_to_assets_only.json  factor_combo_cn_debt_to_eqt_only.json  factor_combo_cn_ema_alignment_only.json  factor_combo_cn_fcff_only.json  factor_combo_cn_framework_v1.json  factor_combo_cn_gics.json  factor_combo_cn_global.json  factor_combo_cn_growth_ema_screen.json  factor_combo_cn_momentum_only.json  factor_combo_cn_ocf_to_debt_only.json  factor_combo_cn_ocf_to_shortdebt_only.json  factor_combo_cn_pe_only.json  factor_combo_cn_ps_ttm_only.json  factor_combo_cn_q_ocf_to_sales_only.json  factor_combo_cn_quality_cashflow_growth_value.json  factor_combo_cn_quick_ratio_only.json  factor_combo_cn_roe_only.json  factor_combo_cn_total_mv_only.json  factor_combo_cn_turnover_rate_only.json
research_out/: accept-20260714.md  accept-20260715.md  accept-20260716.md  ledger.jsonl  report-20260713.md  report-20260714.md  report-20260714b.md  report-20260716.md
scripts/: bench_research.py  consumer_rank.py
strategies/: README.md
tests/: __init__.py  conftest.py  test_adjustment.py  test_backtest_cmd.py  test_backtest_engine.py  test_calendar.py  test_combo_boundaries.py  test_data.py  test_data_loader.py  test_ema_cross_winrate.py  test_episodic_pivot.py  test_factor_registry_market.py  test_factors.py  test_fundamental_factors.py  test_fundamentals_ingestor.py  test_fundamentals_merge.py  test_ingest.py  test_ingest_cmd.py  test_instrument_identity.py  test_intraday_ingestor.py  test_metrics.py  test_montecarlo.py  test_novice_sim.py  test_relative_strength_ema.py  test_risk.py  test_rumi_strategy.py  test_screen_cmd.py  test_screening_engine.py  test_screening_report.py  test_sectors.py  test_sectors_pit.py  (+13 more)
(+184 files in other folders)
